--- a/ios-developer.html
+++ b/ios-developer.html
@@ -125,7 +125,7 @@
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999697629039-ios-developer-senior-principal-senior-principal-position-'>Cermati.com IOS Developer (Senior, Principal, & Senior Principal Position) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -213,7 +213,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://georgelabs.recruitee.com/o/ios-developer-fmd-for-george'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://georgelabs.recruitee.com/o/ios-developer-fmd-for-george'>
       iOS Developer (f/m/d) for George - George Labs GmbH
     </a></h5> 
 <p><span class="badge badge-light">Vienna</span></p>
@@ -337,7 +337,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://bios-3.workable.com/j/A55BA1465A'>BIOS - Jobs: Machine Learning Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bios-3.workable.com/j/A55BA1465A'>BIOS - Jobs: Machine Learning Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
